--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="ostacor">
     <meta name="keywords" content="HTML,CSS,JavaScript,jquery">
     <meta name="author" content="">
+    <!--Este e sun comentario-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
          
           <title>UnilaNet</title>
@@ -88,7 +89,7 @@
            <div class="text-block">
               <i class="fa fa-briefcase" aria-hidden="true"></i><a href="#"><span>Formatos</span></a>
               <div class="inner-contant">
-               <p>Pendiente</p>
+               <p>quitar esta seccion</p>
               </div>
            </div>
           </div>
@@ -191,4 +192,5 @@
 
     </body>
   <!-- Body Ended -->
+  <!--Este es otro comentario-->
 </html>
