--- a/index v2.html
+++ b/index v2.html
@@ -121,7 +121,7 @@
            <img src="images/image-2.jpg" alt="Nature" style="width:100%;">
            <div class="text-block"><i class="fa fa-cogs" aria-hidden="true"></i><a href="http://tic.unila.edu.mx/"><span>Sistemas</span></a>
              <div class="inner-contant">
-               <p>Pendiente</p>
+               <p>QUITAR ESTA SECCION Y PONER BARRAS DESPLEGABLES</p>
               </div>
            </div>
           </div>
