--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="ostacor">
     <meta name="keywords" content="HTML,CSS,JavaScript,jquery">
     <meta name="author" content="">
-    <!--Este e sun comentario-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
          
           <title>UnilaNet</title>
@@ -82,14 +81,37 @@
 
 <!-- About SEction Start -->
 <section class="about">
+<div class="row">
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
           <div class="item">
            <img src="images/image-1.jpg" alt="about" style="width:100%;">
            <div class="text-block">
-              <i class="fa fa-briefcase" aria-hidden="true"></i><a href="#"><span>Formatos</span></a>
-              <div class="inner-contant">
-               <p>quitar esta seccion</p>
+              <i class="fa fa-briefcase" aria-hidden="true"></i><a><span>Formatos</span></a>
+              <hr>
+               <div class="inner-contant">
+    <div class="row form-group">
+    <label for="Archivo">Archivo</label>
+    <select class="form-control col-lg-3" id="Archivo">
+      <option>Excel</option>
+      <option>JPG</option>
+      <option>PDF</option>
+      <option>Power Point</option>
+      <option>Word</option>
+    </select>
+  </div>
+  <div class="row form-group">
+  <label for="Archivo">Archivo</label>
+  <select class="form-control col-lg-3" id="Archivo">
+    <option>Formato de incidencias - Administración.xlsx</option>
+    <option>Manual de Firmas Electronicas.pdf</option>
+    <option>Presentación Power Point.pptx</option>
+    <option>Requisición de Compras.xlsx</option>
+    <option>Requisición de Papeleria.xlsx</option>
+    <option>Logotipo de la Universidad Latina.jpg</option>
+  </select>
+</div>
+    <button type="button" class="btn-primary btn-primary">Descarga</button>
               </div>
            </div>
           </div>
@@ -99,7 +121,7 @@
            <img src="images/image-2.jpg" alt="Nature" style="width:100%;">
            <div class="text-block"><i class="fa fa-cogs" aria-hidden="true"></i><a href="http://tic.unila.edu.mx/"><span>Sistemas</span></a>
              <div class="inner-contant">
-               <p>Pendiente</p>
+               <p>QUITAR ESTA SECCION Y PONER BARRAS DESPLEGABLES</p>
               </div>
            </div>
           </div>
@@ -109,18 +131,39 @@
            <img src="images/image-3.jpg" alt="Nature" style="width:100%;">
            <div class="text-block"><i class="fa fa-object-group" aria-hidden="true"></i><a href="#"><span>Convenios</span></a>
              <div class="inner-contant">
-               <p>Pendiente</p>
+                 <hr>
+               <div class="inner-contant">
+    <div class="row form-group">
+    <label for="Opciones">Opciones</label>
+    <select class="form-control col-lg-3 " id="Archivo">
+      <option>Convenios con otras instituciones</option>
+      <option>Convenio Generales</option>
+    </select>
+  </div>
+  <div class="row form-group">
+  <label for="Archivo">Archivo</label>
+  <select class="form-control col-lg-3" id="Archivo">
+    <option>AMIBANET Y ASOCIADOS, S.A DE C.V.</option>
+    <option>ANIERM</option>
+    <option>AUDITORIA Y CONSULTORIA FISCAL NUEVA ERA</option>
+    <option>COMERCIALIZADORA GLTL INTERNACIONAL, S.A. DE C.V.</option>
+    <option>COMITÉ EJECUTIVO NACIONAL DEL PARTIDO ACCIÓN NACIONAL</option>
+    <option>CONALEP</option>
+    <option>CONSEJO ESTATAL DE POBLACIÓN</option>
+  </select>
+</div>
               </div>
            </div>
           </div>
         </div>
     </div>
+</div>
 </section>
 <!-- About Section Ended -->
     
 <!-- Team Section Start -->
 <section class="team">
-        <h4>COAPA INFORMA</h4>
+        <h4>COMUNICACION INTERNA</h4>
         <h6></h6>
           <div class="row">
               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 col" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
@@ -190,7 +233,6 @@
     <script src="js/jquery.viewbox.min.js"></script>
     <script src="js/custom.js"></script>
 
-    </body>
+    </div></body>
   <!-- Body Ended -->
-  <!--Este es otro comentario-->
 </html>
