--- a/index.html
+++ b/index.html
@@ -51,15 +51,9 @@
                 <ul class="nav navbar-nav navbar-right">
                    <li><a href="index.html">home</a></li>
                    <li class="hidden-xs">|</li>
-                   <li><a href="normatividad.html">Normatividad</a></li>
+                   <li><a href="about.html">Sistemas</a></li>
                    <li class="hidden-xs">|</li>
-                   <li><a href="institucional.html">Doc. Institucional</a></li>
-                   <li class="hidden-xs">|</li>
-                   <li><a href="academica.html">Doc. Academica</a></li>
-                   <li class="hidden-xs">|</li>
-                  <li><a href="blog.html">Noticias</a></li>
-                   <li class="hidden-xs">|</li>
-                   <li><a href="contact.html">Contacto</a></li>
+                   <li><a href="contact.html">contact</a></li>
                 </ul>
             </div>
         </div>
@@ -68,12 +62,10 @@
 
 <!-- Jumbotron Start-->
 <div class="text-center banner">
-  <div class="gradient"></div>
         <div class="row">
             <div class="col-md-12">
                 <h1 data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600">Bienvenido a UnilaNet</h1>
                 <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600">Sitio oficial entre la Universidad y el personal docente o administrativo</p>
-             
             </div>
         </div>
 </div>
@@ -81,126 +73,123 @@
 
 <!-- About SEction Start -->
 <section class="about">
-<div class="row">
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col">
           <div class="item">
            <img src="images/image-1.jpg" alt="about" style="width:100%;">
            <div class="text-block">
-              <i class="fa fa-briefcase" aria-hidden="true"></i><a><span>Formatos</span></a>
-              <hr>
-               <div class="inner-contant">
-    <div class="row form-group">
+              <i class="fa fa-briefcase" aria-hidden="true"></i><a><span>Normatividad</span></a>
+          <div class="row form-group">
     <label for="Archivo">Archivo</label>
     <select class="form-control col-lg-3" id="Archivo">
-      <option>Excel</option>
-      <option>JPG</option>
-      <option>PDF</option>
-      <option>Power Point</option>
-      <option>Word</option>
     </select>
   </div>
   <div class="row form-group">
-  <label for="Archivo">Archivo</label>
-  <select class="form-control col-lg-3" id="Archivo">
-    <option>Formato de incidencias - Administración.xlsx</option>
-    <option>Manual de Firmas Electronicas.pdf</option>
-    <option>Presentación Power Point.pptx</option>
-    <option>Requisición de Compras.xlsx</option>
-    <option>Requisición de Papeleria.xlsx</option>
-    <option>Logotipo de la Universidad Latina.jpg</option>
-  </select>
-</div>
-    <button type="button" class="btn-primary btn-primary">Descarga</button>
-              </div>
-           </div>
+    <label for="Archivo">Archivo</label>
+    <select class="form-control col-lg-3" id="Archivo">
+    </select>
+  </div>
+		  </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col">
           <div class="item">
            <img src="images/image-2.jpg" alt="Nature" style="width:100%;">
-           <div class="text-block"><i class="fa fa-cogs" aria-hidden="true"></i><a href="http://tic.unila.edu.mx/"><span>Sistemas</span></a>
-             <div class="inner-contant">
-               <p>QUITAR ESTA SECCION Y PONER BARRAS DESPLEGABLES</p>
-              </div>
-           </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
-          <div class="item">
-           <img src="images/image-3.jpg" alt="Nature" style="width:100%;">
-           <div class="text-block"><i class="fa fa-object-group" aria-hidden="true"></i><a href="#"><span>Convenios</span></a>
-             <div class="inner-contant">
-                 <hr>
-               <div class="inner-contant">
-    <div class="row form-group">
-    <label for="Opciones">Opciones</label>
-    <select class="form-control col-lg-3 " id="Archivo">
-      <option>Convenios con otras instituciones</option>
-      <option>Convenio Generales</option>
+           <div class="text-block">
+              <i class="fa fa-cogs" aria-hidden="true"></i><a><span>Doc.Institucional</span></a>
+			   <div class="row form-group">
+    <label for="Archivo">Archivo</label>
+    <select class="form-control col-lg-3" id="Archivo">
     </select>
   </div>
   <div class="row form-group">
-  <label for="Archivo">Archivo</label>
-  <select class="form-control col-lg-3" id="Archivo">
-    <option>AMIBANET Y ASOCIADOS, S.A DE C.V.</option>
-    <option>ANIERM</option>
-    <option>AUDITORIA Y CONSULTORIA FISCAL NUEVA ERA</option>
-    <option>COMERCIALIZADORA GLTL INTERNACIONAL, S.A. DE C.V.</option>
-    <option>COMITÉ EJECUTIVO NACIONAL DEL PARTIDO ACCIÓN NACIONAL</option>
-    <option>CONALEP</option>
-    <option>CONSEJO ESTATAL DE POBLACIÓN</option>
-  </select>
-</div>
-              </div>
+    <label for="Archivo">Archivo</label>
+    <select class="form-control col-lg-3" id="Archivo">
+    </select>
+  </div>
            </div>
           </div>
         </div>
-    </div>
-</div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col">
+          <div class="item">
+           <img src="images/image-4.jpg" alt="Nature" style="width:100%;">
+           <div class="text-block">
+              <i class="fa fa-object-group" aria-hidden="true"></i><a><span>Doc.Academica</span></a>
+			   <div class="row form-group">
+    <label for="Archivo">Archivo</label>
+    <select class="form-control col-lg-3" id="Archivo">
+    </select>
+  </div>
+  <div class="row form-group">
+    <label for="Archivo">Archivo</label>
+    <select class="form-control col-lg-3" id="Archivo">
+    </select>
+  </div>
+           </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col">
+          <div class="item">
+           <img src="images/image-3.jpg" alt="Nature" style="width:100%;">
+           <div class="text-block">
+              <i class="fa fa-object-group" aria-hidden="true"></i><a><span>Convenios</span></a>
+			   <div class="row form-group">
+    <label for="Archivo">Archivo</label>
+    <select class="form-control col-lg-3" id="Archivo">
+    </select>
+  </div>
+  <div class="row form-group">
+    <label for="Archivo">Archivo</label>
+    <select class="form-control col-lg-3" id="Archivo">
+    </select>
+  </div>
+           </div>
+          </div>
+        </div>
+	</div>
 </section>
 <!-- About Section Ended -->
-    
+
+<!-- Technologies Section Start -->
+
+<!-- Technologies Section Ended -->
+
+<!-- Specialities Section Start -->
+
+<!-- Specialities Section Ended-->
+
 <!-- Team Section Start -->
 <section class="team">
-        <h4>COMUNICACION INTERNA</h4>
-        <h6></h6>
+        <h4>Comunicacion Interna</h4>
+        <br>
           <div class="row">
               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 col" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
                    <a href="blog_single.html"><img src="images/team-1.jpg" class="img-responsive"></a>
-                 <div class="inner-contant">
-                   <h3><a href="blog_single.html">NOTA 1</a></h3>
-                   <h5>Informacion</h5>
-                   <p><a href="blog_single.html">+ leer más</a></p>
-                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 col" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="500">
                   <a href="blog_single.html"><img src="images/team-2.jpg" class="img-responsive"></a>
-                <div class="inner-contant">
-                  <h3><a href="blog_single.html">NOTA 2</a></h3>
-                  <h5>Informacion </h5>
-                  <p><a href="blog_single.html">+ leer más</a></p>
-                </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 col" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="1000">
                   <a href="blog_single.html"><img src="images/team-3.jpg" class="img-responsive"></a>
-                <div class="inner-contant">
-                <h3><a href="blog_single.html">Nota 3</a></h3>
-                <h5>Informacion</h5>
-                <p><a href="blog_single.html">+ leer más</a></p>
-                </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 col" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="1500">
                   <a href="blog_single.html"><img src="images/team-4.jpg" class="img-responsive"></a>
-                <div class="inner-contant">
-                <h3><a href="blog_single.html">Nota 4</a></h3>
-                <h5>Informacion</h5>
-                <p><a href="blog_single.html">+ leer más</a></p>
-                </div>
               </div>
           </div>
 </section>
 <!-- Team Ended -->
+
+<!-- Services Start -->
+
+<!-- Services Ended-->
+
+<!-- Contact Section Start -->
+
+<!-- Contact Section Ended -->
+
+<!-- customer Section Start -->
+
+<!-- customer Section Ended -->
 
 <!-- Footer section Start -->
 <footer>
@@ -209,13 +198,10 @@
        <div class="row" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
            <ul>
                <li><a href="index.html">Home </a></li><li class="semicolon">|</li>
-               <li><a href="services.html">our services</a></li><li class="semicolon">|</li>
-               <li><a href="portfolio.html">portfolio</a></li><li class="semicolon">|</li>
-               <li><a href="blog_single.html">Read Blog</a></li><li class="semicolon">|</li>
                <li><a href="contact.html">contact</a></li><li class="semicolon">|</li>
                <li><a href="support.html">support</a></li>
            </ul>
-           <p>(C) 2019 All rights reserved <span><a href="https://www.unila.edu.mx/" target="_blank" style="color: #b9b203;">Universidad Latina</a></span>Designed by <span><a href="#" target="_blank" style="color: #03b9b3;">Ambrozyne</a></span></p>
+           <p>(C) 2019 All rights reserved <span><a href="https://www.template.net/editable/websites/html5" target="_blank" style="color: #b9b203;">Universidad Latina </a></span> Designed by <span><a href="#" target="_blank" style="color: #03b9b3;">Ambrozyne</a></span></p>
        </div>
        <div class="footer-logo">
               <a href="index.html"><img src="images/logo.png" alt="footer-logo"></a>
@@ -233,6 +219,6 @@
     <script src="js/jquery.viewbox.min.js"></script>
     <script src="js/custom.js"></script>
 
-    </div></body>
+    </body>
   <!-- Body Ended -->
 </html>
