--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
          
-          <title>ostacor</title>
+          <title>Contacto</title>
           <!-- bootstrap -->
           <link href="css/bootstrap.min.css" rel="stylesheet">
           <!-- Custom CSS: custom Styles -->
@@ -69,15 +69,7 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
                 <ul class="nav navbar-nav navbar-right">
                    <li><a href="index.html">home</a></li>
                    <li class="hidden-xs">|</li>
-                   <li><a href="about.html">About</a></li>
-                   <li class="hidden-xs">|</li>
-                   <li><a href="services.html">services</a></li>
-                   <li class="hidden-xs">|</li>
-                   <li><a href="portfolio.html">portfolio</a></li>
-                   <li class="hidden-xs">|</li>
-                   <li><a href="blog.html">Blog</a></li>
-                   <li class="hidden-xs">|</li>
-                   <li><a href="contact.html">contact</a></li>
+                   <li><a href="about.html">Sistemas</a></li>
                 </ul>
             </div>
         </div>
@@ -86,7 +78,6 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
 
 <!-- Jumbotron Start-->
 <div class="text-center banner">
-   <div class="gradient"></div>
     <div class="container">
        <div class="row">
            <div class="col-md-12">
@@ -162,13 +153,10 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
        <div class="row" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
            <ul>
                <li><a href="index.html">Home </a></li><li class="semicolon">|</li>
-               <li><a href="services.html">our services</a></li><li class="semicolon">|</li>
-               <li><a href="portfolio.html">portfolio</a></li><li class="semicolon">|</li>
-               <li><a href="blog_single.html">Read Blog</a></li><li class="semicolon">|</li>
-               <li><a href="support.html">contact</a></li><li class="semicolon">|</li>
+               <li><a href="contact.html">contact</a></li><li class="semicolon">|</li>
                <li><a href="support.html">support</a></li>
            </ul>
-           <p>(C) 2017 All rights reserved <span><a href="https://www.template.net/editable/websites/html5" target="_blank" style="color: #b9b203;">ostacor.</a></span>Designed by <span><a href="https://www.template.net/editable/websites/html5" target="_blank" style="color: #03b9b3;">template.net</a></span></p>
+           <p>(C) 2019 All rights reserved <span><a href="https://www.template.net/editable/websites/html5" target="_blank" style="color: #b9b203;">Universidad Latina </a></span> Designed by <span><a href="#" target="_blank" style="color: #03b9b3;">Ambrozyne</a></span></p>
        </div>
        <div class="footer-logo">
               <a href="index.html"><img src="images/logo.png" alt="footer-logo"></a>
