--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul class="nav navbar-nav navbar-right">
                    <li><a href="index.html">home</a></li>
                    <li class="hidden-xs">|</li>
-                   <li><a href="about.html">Sistemas</a></li>
+                   <li><a href="http://tic.unila.edu.mx/">Sistemas</a></li>
                    <li class="hidden-xs">|</li>
                    <li><a href="contact.html">contact</a></li>
                 </ul>
@@ -201,7 +201,7 @@
                <li><a href="contact.html">contact</a></li><li class="semicolon">|</li>
                <li><a href="support.html">support</a></li>
            </ul>
-           <p>(C) 2019 All rights reserved <span><a href="https://www.template.net/editable/websites/html5" target="_blank" style="color: #b9b203;">Universidad Latina </a></span> Designed by <span><a href="#" target="_blank" style="color: #03b9b3;">Ambrozyne</a></span></p>
+           <p>(C) 2019 All rights reserved <span><a href="https://www.unila.edu.mx/" target="_blank" style="color: #b9b203;">Universidad Latina </a></span> Designed by <span><a href="#" target="_blank" style="color: #03b9b3;">Ambrozyne</a></span></p>
        </div>
        <div class="footer-logo">
               <a href="index.html"><img src="images/logo.png" alt="footer-logo"></a>
