--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,9 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <!-- Nav links -->
                 <ul class="nav navbar-nav navbar-right">
-                   <li><a href="index.html">home</a></li>
+                   <li><a href="index.html">Home</a></li>
                    <li class="hidden-xs">|</li>
-                   <li><a href="about.html">Sistemas</a></li>
+                   <li><a href="http://tic.unila.edu.mx/">Sistemas</a></li>
                 </ul>
             </div>
         </div>
@@ -92,8 +92,7 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
 <div id="contact">
   <div class="container">
    <div class="col-md-12 text-left" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
-       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-       <p>essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop p ldus PageMaker including versions of Lorem Ipsum.</p>
+       <p>En UnilaNet estamos trabajando en la inovacion continua con lo cual ofrecemos este apartado donde podras contactarte con nosotros para la mejora de la plataforma</p>
    </div>
      <div class="container py-5">
       <div class="row">
@@ -101,13 +100,13 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
               <form>
                   <div class="form-group row" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                       <div class="col-sm-4">
-                          <input type="text" class="form-control" placeholder="Your Name" required>
+                          <input type="text" class="form-control" placeholder="Nombre" required>
                       </div>
                           <div class="col-sm-4">
-                          <input type="text" class="form-control" placeholder="Your Email id" required>
+                          <input type="text" class="form-control" placeholder="Email" required>
                       </div>
                       <div class="col-sm-4">
-                          <input type="text" class="form-control" placeholder="Your Website" required>
+                          <input type="text" class="form-control" placeholder="Area" required>
                       </div>
                   </div>
                   <div class="form-group row" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
@@ -118,7 +117,7 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
                            <option value="psd to html">Psd to html</option>
                            <option value="web hosting">Web hosting</option>
                            <option value="website template">website template</option>
-                           <option value="" selected disabled hidden>What Type of Service your are looking for?</option>
+                           <option value="" selected disabled hidden>Cual es el tipo de problema que tiene?</option>
                          </select>
                       </div>
                       <div class="col-xs-12 col-md-4">
@@ -134,10 +133,10 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
                   </div>
                   <div class="form-group row" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                       <div class="col-xs-12 col-md-12">
-                          <textarea type="text" class="form-control" placeholder="Extra Message" rows="8" required></textarea>
+                          <textarea type="text" class="form-control" placeholder="Ingrese el Mensage" rows="8" required></textarea>
                       </div>
                   </div>
-                  <button type="submit" class="btn btn-primary px-4" data-aos="zoom-in" data-aos-duration="1000">Alright, Get the Free Quote</button>
+                  <button type="submit" class="btn btn-primary px-4" data-aos="zoom-in" data-aos-duration="1000">Enviar</button>
               </form>
           </div>
       </div>
@@ -154,9 +153,9 @@ footer {background-image: url("images/banner-customers.jpg");background-repeat: 
            <ul>
                <li><a href="index.html">Home </a></li><li class="semicolon">|</li>
                <li><a href="contact.html">contact</a></li><li class="semicolon">|</li>
-               <li><a href="support.html">support</a></li>
+               
            </ul>
-           <p>(C) 2019 All rights reserved <span><a href="https://www.template.net/editable/websites/html5" target="_blank" style="color: #b9b203;">Universidad Latina </a></span> Designed by <span><a href="#" target="_blank" style="color: #03b9b3;">Ambrozyne</a></span></p>
+           <p>(C) 2019 All rights reserved <span><a href="https://www.unila.edu.mx/" target="_blank" style="color: #b9b203;">Universidad Latina </a></span> Designed by <span><a href="#" target="_blank" style="color: #03b9b3;">Ambrozyne</a></span></p>
        </div>
        <div class="footer-logo">
               <a href="index.html"><img src="images/logo.png" alt="footer-logo"></a>
