--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
   <div class="row form-group">
     <label for="Archivo">Archivo</label>
     <select class="form-control col-lg-3" id="Archivo">
-    </select>
+    </select>  
   </div>
+   <button type="button" class="btn btn-info">Descarga</button>
 		  </div>
           </div>
         </div>
@@ -107,6 +108,7 @@
     <select class="form-control col-lg-3" id="Archivo">
     </select>
   </div>
+   <button type="button" class="btn btn-info">Descarga</button>
            </div>
           </div>
         </div>
@@ -125,6 +127,7 @@
     <select class="form-control col-lg-3" id="Archivo">
     </select>
   </div>
+    <button type="button" class="btn btn-info">Descarga</button>
            </div>
           </div>
         </div>
@@ -132,7 +135,9 @@
           <div class="item">
            <img src="images/image-3.jpg" alt="Nature" style="width:100%;">
            <div class="text-block">
-              <i class="fa fa-object-group" aria-hidden="true"></i><a><span>Convenios</span></a>
+              <i class="fa fa-object-group" aria-hidden="true"></i>
+               <br>
+               <a><span>Convenios</span></a>
 			   <div class="row form-group">
     <label for="Archivo">Archivo</label>
     <select class="form-control col-lg-3" id="Archivo">
@@ -143,6 +148,7 @@
     <select class="form-control col-lg-3" id="Archivo">
     </select>
   </div>
+    <button type="button" class="btn btn-info">Descarga</button>
            </div>
           </div>
         </div>
