--- a/index.html
+++ b/index.html
@@ -71,97 +71,152 @@
 </div>
 <!-- Jumbotron Ended -->
 
-<!-- About SEction Start -->
+<!-- Seccion Normatividad -->
 <section class="about">
-    <div class="row">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col">
-          <div class="item">
-           <img src="images/image-1.jpg" alt="about" style="width:100%;">
-           <div class="text-block">
-              <i class="fa fa-briefcase" aria-hidden="true"></i><a><span>Normatividad</span></a>
-          <div class="row form-group">
-    <label for="Archivo">Archivo</label>
-    <select class="form-control col-lg-3" id="Archivo">
-    </select>
+<div class="row">
+<div class="col-lg-3 col-md-3 col-sm-1 col-xs-12 col">
+<div class="item">
+<img src="images/image-1.jpg" alt="about" style="width:100%;">
+<div class="text-block">
+<i class="fa fa-briefcase" aria-hidden="true"></i><a><span>Normatividad</span></a>
+
+<!--label 1-->
+  <div class="row form-group">
+    <label for="Archivo">Sección</label>
+     <select class="form-control col-lg-3 col-md-3 col-sm-1 col-xs-12 col" id="Archivo">
+        <option>Manual Organizacional</option>
+        <option>Manual Buzón del Rector</option>
+        <option>Manual de Políticas y Procedimientos</option>
+        <option>Manual de Autoestudio FIMPES </option>
+        <option>Reglamentos Escolares </option>
+        <option>Reglamentos Internos</option>
+        <option>Lineamientos</option>
+        <option>Leyes Externas</option>
+     </select>
   </div>
   <div class="row form-group">
     <label for="Archivo">Archivo</label>
-    <select class="form-control col-lg-3" id="Archivo">
-    </select>  
+     <select class="form-control col-lg-3 col-md-3 col-sm-1 col-xs-12 col" id="Archivo">
+        <option></option>
+        <option></option>
+        <option></option>
+        <option></option>
+     </select>  
   </div>
+
+  <button type="button" class="btn btn-info">Descarga</button>
+
+</div>
+</div>
+</div>
+<!-- end label 1 -->
+  
+<!-- Seccion Doc.Institucional -->
+<div class="col-lg-3 col-md-3 col-sm-1 col-xs-12 col">
+<div class="item">
+<img src="images/image-2.jpg" alt="Nature" style="width:100%;">
+<div class="text-block">
+<i class="fa fa-cogs" aria-hidden="true"></i><a><span>Doc.Institucional</span></a>
+
+<!-- label 2 -->
+	<div class="row form-group">
+    <label for="Archivo">Sección</label>
+      <select class="form-control col-lg-3 col-md-3 col-sm-1 col-xs-12 col" id="Archivo">
+          <option>Programa de Fomento a la Lectura</option>
+          <option></option>
+          <option></option>
+          <option></option>
+      </select>
+  </div>
+  <div class="row form-group">
+    <label for="Archivo">Archivo</label>
+      <select class="form-control col-lg-3 col-md-3 col-sm-1 col-xs-12 col" id="Archivo">
+        <option>2013</option>
+        <option>2014</option>
+        <option>2015</option>
+        <option></option>
+      </select>
+  </div>
+
    <button type="button" class="btn btn-info">Descarga</button>
-		  </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col">
-          <div class="item">
-           <img src="images/image-2.jpg" alt="Nature" style="width:100%;">
-           <div class="text-block">
-              <i class="fa fa-cogs" aria-hidden="true"></i><a><span>Doc.Institucional</span></a>
-			   <div class="row form-group">
-    <label for="Archivo">Archivo</label>
-    <select class="form-control col-lg-3" id="Archivo">
-    </select>
+
+</div>
+</div>
+</div>
+<!-- end label 2 -->
+
+<!-- Seccion Doc.Academica -->
+<div class="col-lg-3 col-md-3 col-sm-1 col-xs-12 col">
+<div class="item">
+<img src="images/image-4.jpg" alt="Nature" style="width:100%;">
+<div class="text-block">
+<i class="fa fa-object-group" aria-hidden="true"></i><a><span>Doc.Academica</span></a>
+
+<!-- label 3 -->
+  <div class="row form-group">
+    <label for="Archivo">Sección</label>
+      <select class="form-control col-lg-3 col-md-3 col-sm-1 col-xs-12 col" id="Archivo">
+          <option>Incorporaciones UNAM</option>
+          <option>Reconocimientos de Validez Oficial de Estudios </option>
+          <option>Reconocimientos de Validez Oficial de Estudios SEEM –GENERAL</option>
+          <option>Planes y Programas de Estudio SEP</option>
+          <option>Planes y Programas de Estudio UNAM</option>
+          <option>Planes y Programas de Estudio SEEM</option>
+          <option></option>
+      </select>
   </div>
   <div class="row form-group">
     <label for="Archivo">Archivo</label>
-    <select class="form-control col-lg-3" id="Archivo">
-    </select>
+      <select class="form-control col-lg-3 col-md-3 col-sm-1 col-xs-12 col" id="Archivo">
+          <option></option>
+          <option></option>
+          <option></option>
+      </select>
   </div>
-   <button type="button" class="btn btn-info">Descarga</button>
-           </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col">
-          <div class="item">
-           <img src="images/image-4.jpg" alt="Nature" style="width:100%;">
-           <div class="text-block">
-              <i class="fa fa-object-group" aria-hidden="true"></i><a><span>Doc.Academica</span></a>
-			   <div class="row form-group">
+
+  <button type="button" class="btn btn-info">Descarga</button>
+
+</div>
+</div>
+</div>
+<!-- end label 3 -->
+
+<!-- Seccion Convenios -->
+<div class="col-lg-3 col-md-3 col-sm-1 col-xs-12 col">
+<div class="item">
+<img src="images/image-3.jpg" alt="Nature" style="width:100%;">
+<div class="text-block">
+<i class="fa fa-object-group" aria-hidden="true"></i><a><span>Convenios</span></a>
+
+<!-- label 4 -->
+	<div class="row form-group">
     <label for="Archivo">Archivo</label>
-    <select class="form-control col-lg-3" id="Archivo">
-    </select>
+      <select class="form-control col-lg-3 col-md-3 col-sm-1 col-xs-12 col" id="Archivo">
+          <option>Incorporaciones UNAM Campus Roma</option>
+          <option>Incorporaciones UNAM Campus Sur</option>
+          <option>Incorporaciones UNAM Campus Cuernavaca</option>
+          <option>Incorporaciones UNAM Campus Cuautla</option>
+      </select>
   </div>
   <div class="row form-group">
     <label for="Archivo">Archivo</label>
-    <select class="form-control col-lg-3" id="Archivo">
-    </select>
+      <select class="form-control col-lg-3 col-md-3 col-sm-1 col-xs-12 col" id="Archivo">
+          <option></option>
+          <option></option>
+          <option></option>
+          <option></option>
+      </select>
   </div>
+
     <button type="button" class="btn btn-info">Descarga</button>
-           </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col">
-          <div class="item">
-           <img src="images/image-3.jpg" alt="Nature" style="width:100%;">
-           <div class="text-block">
-              <i class="fa fa-object-group" aria-hidden="true"></i>
-               <a><span>Convenios</span></a>
-			   <div class="row form-group">
-    <label for="Archivo">Archivo</label>
-    <select class="form-control col-lg-3" id="Archivo">
-    </select>
-  </div>
-  <div class="row form-group">
-    <label for="Archivo">Archivo</label>
-    <select class="form-control col-lg-3" id="Archivo">
-    </select>
-  </div>
-    <button type="button" class="btn btn-info">Descarga</button>
-           </div>
-          </div>
-        </div>
+
+</div>
+</div>
+</div>
+<!-- end label 4 -->
 	</div>
 </section>
 <!-- About Section Ended -->
-
-<!-- Technologies Section Start -->
-
-<!-- Technologies Section Ended -->
-
-<!-- Specialities Section Start -->
-
-<!-- Specialities Section Ended-->
 
 <!-- Team Section Start -->
 <section class="team">
@@ -183,18 +238,6 @@
           </div>
 </section>
 <!-- Team Ended -->
-
-<!-- Services Start -->
-
-<!-- Services Ended-->
-
-<!-- Contact Section Start -->
-
-<!-- Contact Section Ended -->
-
-<!-- customer Section Start -->
-
-<!-- customer Section Ended -->
 
 <!-- Footer section Start -->
 <footer>
